# rknn-vision-lab

./: .gitignore  settings.gradle
app/: VIDEO_DEMO_README.md  build.gradle
app/src/androidTest/java/com/smartprints/rknn_vision_lab/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml  activity_video.xml  activity_video_demo.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
opencv/java/src/org/opencv/core/: Core.java
opencv/java/src/org/opencv/dnn/: Dnn.java  Model.java  Net.java  TextDetectionModel.java
opencv/java/src/org/opencv/imgcodecs/: Imgcodecs.java
opencv/java/src/org/opencv/imgproc/: Imgproc.java
rknn_sdk/: CMakeLists.txt  build.gradle
rknn_sdk/src/androidTest/java/com/smartprintsksa/rknn_sdk/: ExampleInstrumentedTest.java
rknn_sdk/src/main/: AndroidManifest.xml
rknn_sdk/src/main/cpp/: native-lib.cc  post_process.h  yolo_image.cc  yolo_image.h
rknn_sdk/src/main/java/com/smartprintsksa/rknn_sdk/: BaseModuleActivity.java  Encryption.java  HALDefine.java  InferenceResult.java  InferenceWrapper.java  Logger.java  Processor.java  RGA.java  RKNNHelper.java  YoloDetector.java  YoloDetectorHelper.java
rknn_sdk/src/main/java/com/smartprintsksa/rknn_sdk/structs/: DetectedObject.java  YoloDetections.java  YoloRawOutput.java
rknn_sdk/src/test/java/com/smartprintsksa/rknn_sdk/: ExampleUnitTest.java
(+32 files in other folders)
